--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
             "value":"domain"
 		},
         "DB_URL":{
-            "description": "get mongodb database url from https://www.mongodb.com/cloud/atlas with database name = mediaFile and collection name = fileBackup",
+            "description": "get mongodb database url from https://www.mongodb.com/cloud/atlas with database name = files and collection name = user",
             "value":"db"
         },
         "ADMIN":{
